sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var v:Int
      ^AlgInsertionSort:4: error: local variables must be initialized
  var v:Int
      ^