sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var lgr=getNombreValeurs
  var v:Int
  for (i <- 1 to lgr-1) {
    for (j <- 1 to i) {
      copie(i,v)
      if (plusPetit(v,i-j)) {
        copie(i-j,i)
      }
    }
  }
}